[package]
name = "pvthfhe-fuzz"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
pvthfhe-nizk = { path = "../pvthfhe-nizk" }
pvthfhe-pvss = { path = "../pvthfhe-pvss" }
pvthfhe-fhe = { path = "../pvthfhe-fhe", features = ["mock"] }
pvthfhe-compressor = { path = "../pvthfhe-compressor" }
pvthfhe-types = { path = "../pvthfhe-types" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
pvthfhe-wire = { path = "../pvthfhe-wire" }
arbitrary = { version = "1", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
sha2 = "0.10"
ark-bn254 = "0.5"
ark-ff = "0.5"
fhe-math = { package = "fhe-math", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }
fhe-traits = { package = "fhe-traits", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }

[lib]
name = "pvthfhe_fuzz"
path = "src/lib.rs"

[[bin]]
name = "sigma-fuzzer"
path = "src/sigma_fuzzer.rs"

[[bin]]
name = "bfv-sigma-fuzzer"
path = "src/bfv_sigma_fuzzer.rs"

[[bin]]
name = "pvss-fuzzer"
path = "src/pvss_fuzzer.rs"

[[bin]]
name = "nova-fuzzer"
path = "src/nova_fuzzer.rs"

[[test]]
name = "fuzz_tests"
path = "tests/fuzz_tests.rs"

[lints]
workspace = true
