[package]
name = "pvthfhe-keygen"
version = "0.1.0"
edition = "2021"
description = "P4 keygen adapter crate: bridges pvthfhe-keygen-spec interface to real Hermine-adapted PVSS (real impl deferred to T4)."
license = "MIT"

[features]
production-profile = ["pvthfhe-fhe/production-profile"]
hermine = []

[dependencies]
sha2 = "0.10"
subtle = "2"
pvthfhe-fhe = { path = "../pvthfhe-fhe" }
pvthfhe-rng = { path = "../pvthfhe-rng" }
pvthfhe-nizk = { path = "../pvthfhe-nizk" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
rand_core = "0.6"
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"

[lints]
workspace = true
