[package]
name = "pvthfhe-micronova"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ark-bn254 = "0.6"
ark-ff = "0.6"
ark-grumpkin = "0.6"
pvthfhe-cyclo = { path = "../pvthfhe-cyclo" }
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1"

[dev-dependencies]
rand_chacha = "0.3"
rand_core = "0.6"

[lints]
workspace = true
