[package]
name = "pvthfhe-nizk"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rand_core = "0.6"
rand_chacha = "0.3"
thiserror = "1"
sha2 = "0.10"
num-bigint = { version = "0.4", features = ["rand"] }
fhe-math = { package = "fhe-math", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }
subtle = "2"

[dev-dependencies]
hex = "0.4"

[lints]
workspace = true
