[package]
name = "pvthfhe-nizk"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
pvthfhe-rng = { path = "../pvthfhe-rng" }
pvthfhe-types = { path = "../pvthfhe-types" }
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
thiserror = "1"
sha2 = "0.10"
sha3 = "0.10"
num-bigint = { version = "0.4", features = ["rand"] }
fhe-math = { package = "fhe-math", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }
fhe-traits = { package = "fhe-traits", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }
hex = "0.4"
subtle = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
light-poseidon = "0.4"
ark-bn254 = "0.5"
tracing = "0.1"
ark-ff = "0.5"
ark-ec = "0.5"

[dev-dependencies]

[lints]
workspace = true
