[package]
name = "pvthfhe-offchain-verifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pvthfhe-offchain-verifier"
path = "src/main.rs"

[dependencies]
pvthfhe-compressor = { path = "../pvthfhe-compressor" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha3 = "0.10"
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
