[package]
name = "pvthfhe-pvss"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
production-stub-allowed = []

[dependencies]
pvthfhe-fhe = { path = "../pvthfhe-fhe" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
pvthfhe-keygen-spec = { path = "../pvthfhe-keygen-spec" }
pvthfhe-nizk = { path = "../pvthfhe-nizk" }
pvthfhe-rng = { path = "../pvthfhe-rng" }
pvthfhe-types = { path = "../pvthfhe-types" }
pvthfhe-wire = { path = "../pvthfhe-wire" }
ark-ff = "0.5"
ark-bn254 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
sha2 = "0.10"
fhe-math = { package = "fhe-math", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }
fhe-traits = { package = "fhe-traits", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }

[dev-dependencies]
serde_json = "1"
pvthfhe-fhe = { path = "../pvthfhe-fhe", features = ["mock"] }
syn = { version = "2", features = ["full"] }
proptest = "1"

[lints]
workspace = true
