[package]
name = "pvthfhe-pvss"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
production-profile = ["pvthfhe-fhe/production-profile"]
mock = ["pvthfhe-fhe/mock"]
production-stub-allowed = []
committee-pvss = []

[dependencies]
pvthfhe-fhe = { path = "../pvthfhe-fhe" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
pvthfhe-keygen-spec = { path = "../pvthfhe-keygen-spec" }
pvthfhe-nizk = { path = "../pvthfhe-nizk" }
pvthfhe-rng = { path = "../pvthfhe-rng" }
pvthfhe-types = { path = "../pvthfhe-types" }
pvthfhe-wire = { path = "../pvthfhe-wire" }
ark-ff = "0.5"
ark-bn254 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
sha2 = "0.10"
sha3 = "0.10"
fhe-math = { package = "fhe-math", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }
fhe-traits = { package = "fhe-traits", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }
subtle = "2"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
pvthfhe-fhe = { path = "../pvthfhe-fhe" }
syn = { version = "2", features = ["full"] }
proptest = "1"

[[test]]
name = "decrypt_share_nizk"
path = "tests/decrypt_share_nizk.rs"
required-features = ["mock"]

[[test]]
name = "encrypt_decrypt_roundtrip"
path = "tests/encrypt_decrypt_roundtrip.rs"
required-features = ["mock"]

[[test]]
name = "nizk_decrypt_committed_smudge"
path = "tests/nizk_decrypt_committed_smudge.rs"
required-features = ["mock"]

[[test]]
name = "nizk_share_real_verify"
path = "tests/nizk_share_real_verify.rs"
required-features = ["mock"]

[[test]]
name = "nizk_share_fs_binding"
path = "tests/nizk_share_fs_binding.rs"
required-features = ["mock"]

[[test]]
name = "nizk_share_soundness"
path = "tests/nizk_share_soundness.rs"
required-features = ["mock"]

[[test]]
name = "share_nizk"
path = "tests/share_nizk.rs"
required-features = ["mock"]

[[test]]
name = "nizk_share_batched_tracks"
path = "tests/nizk_share_batched_tracks.rs"
required-features = ["mock"]

[[test]]
name = "nizk_share_zk"
path = "tests/nizk_share_zk.rs"
required-features = ["mock"]

[lints]
workspace = true
