[package]
name = "pvthfhe-tests"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
pvthfhe-nizk = { path = "../pvthfhe-nizk" }
pvthfhe-pvss = { path = "../pvthfhe-pvss" }
pvthfhe-fhe = { path = "../pvthfhe-fhe", features = ["mock"] }
pvthfhe-compressor = { path = "../pvthfhe-compressor" }
pvthfhe-types = { path = "../pvthfhe-types" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
pvthfhe-wire = { path = "../pvthfhe-wire" }
pvthfhe-rng = { path = "../pvthfhe-rng" }
pvthfhe-cyclo = { path = "../pvthfhe-cyclo" }
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
sha2 = "0.10"
sha3 = "0.10"
ark-bn254 = "0.5"
ark-ff = "0.5"
fhe-math = { package = "fhe-math", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }
fhe-traits = { package = "fhe-traits", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }

[dev-dependencies]
proptest = "1"

[[test]]
name = "adversarial"
path = "tests/adversarial/mod.rs"

[lints]
workspace = true
