[package]
name = "pvthfhe-types"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
zeroize = { version = "1", features = ["zeroize_derive"] }
serde = { version = "1", features = ["derive"] }
syn = { version = "2", features = ["full", "parsing", "visit"] }
walkdir = "2"

[dev-dependencies]
quote = "1"
